--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@prisma/client": "6.7.0",
     "next": "15.3.1",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "svix": "^1.64.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
