--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@clerk/nextjs": "^6.18.1",
     "@prisma/client": "6.7.0",
+    "date-fns": "^4.1.0",
     "next": "15.3.1",
     "react": "^19.1.0",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^19.1.0",
-    "svix": "^1.64.1"
+    "svix": "^1.64.1",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
