--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.18.1",
+    "@google/generative-ai": "^0.24.1",
     "@prisma/client": "6.7.0",
     "date-fns": "^4.1.0",
     "next": "15.3.1",
