--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@google/generative-ai": "^0.24.1",
     "@prisma/client": "6.7.0",
     "date-fns": "^4.1.0",
+    "lucide-react": "^0.507.0",
     "next": "15.3.1",
     "react": "^19.1.0",
     "react-datepicker": "^8.3.0",
