--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "compose:dev": "docker compose -f docker-compose.yml -f docker-compose.dev.yml up --build -d",
+    "compose:prod": "docker compose -f docker-compose.yml -f docker-compose.prod.yml up -d",
+    "compose:down": "docker compose -f docker-compose.yml -f docker-compose.dev.yml -f docker-compose.prod.yml down",
+    "compose:build:nocache": "docker compose -f docker-compose.yml -f docker-compose.dev.yml build --no-cache app",
+    "compose:deploy": "docker compose -f docker-compose.yml -f docker-compose.prod.yml pull && docker compose -f docker-compose.yml -f docker-compose.prod.yml down && docker compose -f docker-compose.yml -f docker-compose.prod.yml up -d"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.18.1",
