--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "compose:dev": "docker compose -f docker-compose.yml -f docker-compose.dev.yml up --build -d",
     "compose:prod": "docker compose -f docker-compose.yml -f docker-compose.prod.yml up -d",
     "compose:down": "docker compose -f docker-compose.yml -f docker-compose.dev.yml -f docker-compose.prod.yml down",
-    "compose:build:nocache": "docker compose -f docker-compose.yml -f docker-compose.dev.yml build --no-cache app",
+    "compose:build": "docker compose -f docker-compose.yml -f docker-compose.dev.yml build --no-cache app",
     "compose:deploy": "docker compose -f docker-compose.yml -f docker-compose.prod.yml pull && docker compose -f docker-compose.yml -f docker-compose.prod.yml down && docker compose -f docker-compose.yml -f docker-compose.prod.yml up -d"
   },
   "dependencies": {
