--- a/Dockerfile - Copy
+++ b/Dockerfile - Copy
@@ -36,7 +36,7 @@ WORKDIR /app
 # --- Add Build Arguments ---
 # Declare arguments that can be passed during the build
 ARG NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY
-ARG NEXT_PUBLIC_SITE_URL
+ARG PUBLIC_SITE_URL
 
 # Copy dependencies and prisma client from the 'deps' stage
 COPY --from=deps /app/node_modules ./node_modules
@@ -47,7 +47,7 @@ COPY . .
 # --- Set Environment Variables for Build ---
 # Make the build arguments available as environment variables for the build command
 ENV NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=${NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY}
-ENV NEXT_PUBLIC_SITE_URL=${NEXT_PUBLIC_SITE_URL}
+ENV PUBLIC_SITE_URL=${PUBLIC_SITE_URL}
 
 # Build the Next.js application
 # The output will be in .next/standalone thanks to `output: 'standalone'` in next.config.ts
