--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,7 +37,7 @@ stages:
           latest
         buildContext: '$(Build.SourcesDirectory)' # This should be the path argument Docker needs
         # --- Re-added arguments on a single line ---
-        arguments: '--build-arg ARG1=Value1 --build-arg NEXT_PUBLIC_SITE_URL=$(NEXT_PUBLIC_SITE_URL)'
+        arguments: '--build-arg ARG1=Value1 --build-arg PUBLIC_SITE_URL=$(PUBLIC_SITE_URL)'
 
     - task: Docker@2
       displayName: 'Push image to Docker Hub' 
