--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -12,7 +12,7 @@ services:
         # Pass build-time args needed by your Dockerfile
         # Ensure these are defined in your .env file for local builds
         NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY: ${NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY}
-        NEXT_PUBLIC_SITE_URL: ${NEXT_PUBLIC_SITE_URL}
+        PUBLIC_SITE_URL: ${PUBLIC_SITE_URL}
         GOOGLE_API_KEY: ${GOOGLE_API_KEY} # If needed by build process
     container_name: friznaklik_app_dev # Use a distinct name for dev
     restart: unless-stopped # Changed from always for dev
@@ -27,7 +27,7 @@ services:
       NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY: ${NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY} # Still needed at runtime
       CLERK_SECRET_KEY: ${CLERK_SECRET_KEY}
       NEXT_PUBLIC_CLERK_DOMAIN: ${NEXT_PUBLIC_CLERK_DOMAIN}
-      NEXT_PUBLIC_SITE_URL: ${NEXT_PUBLIC_SITE_URL} # Still needed at runtime
+      PUBLIC_SITE_URL: ${PUBLIC_SITE_URL} # Still needed at runtime
       GOOGLE_API_KEY: ${GOOGLE_API_KEY} # Needed at runtime
       CLERK_WEBHOOK_SECRET: ${CLERK_WEBHOOK_SECRET} 
       NODE_ENV: development # Explicitly set for dev
