- Fixed docker issue with vm deployment

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -9,7 +9,7 @@ services:
         # Pass build-time args needed by your Dockerfile
         # Ensure these are defined in your .env file for local builds
         NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY: ${NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY}
-        #PUBLIC_SITE_URL: ${PUBLIC_SITE_URL}
+        NEXT_PUBLIC_SITE_URL: ${NEXT_PUBLIC_SITE_URL}
         #GOOGLE_API_KEY: ${GOOGLE_API_KEY} # If needed by build process
     container_name: friznaklik_app_dev # Use a distinct name for dev
     restart: unless-stopped # Changed from always for dev
