--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,9 @@
-# docker-compose.yml (Base Configuration)
-# Defines common services and networks/volumes
-
 services:
   db:
     image: postgres:15-alpine 
     container_name: friznaklik_db
     restart: always
     environment:
-      # These will be read from the .env file
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
@@ -15,11 +11,10 @@ services:
       - postgres_data:/var/lib/postgresql/data # Persist database data
     ports:
       - "${POSTGRES_PORT:-5432}:5432" 
-    healthcheck: # Optional: Add healthcheck for DB readiness
+    healthcheck: 
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
       interval: 10s
       timeout: 5s
       retries: 5
-
 volumes:
-  postgres_data: # Define the named volume for data persistence
+  postgres_data:
