--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -57,13 +57,16 @@ stages:
       displayName: 'Create .env file on VM Agent'
       # Map pipeline variables (including secrets) to environment variables for the script
       env:
-        DATABASE_URL: postgresql://$(POSTGRES_USER):$(POSTGRES_PASSWORD)@db:5432/$$(POSTGRES_DB)?schema=public
+        DATABASE_URL: postgresql://$(POSTGRES_USER):$(POSTGRES_PASSWORD)@db:5432/$(POSTGRES_DB)?schema=public
       inputs:
         targetType: 'inline'
         script: |
           ENV_FILE_PATH="$(Agent.BuildDirectory)/s/.env"
           echo "Creating .env file at ${ENV_FILE_PATH}"
           > "${ENV_FILE_PATH}" 
+          echo "POSTGRES_USER=$(POSTGRES_USER)" >> "${ENV_FILE_PATH}"
+          echo "POSTGRES_PASSWORD=$(POSTGRES_PASSWORD)" >> "${ENV_FILE_PATH}"
+          echo "POSTGRES_DB=$(POSTGRES_DB)" >> "${ENV_FILE_PATH}"
           echo "DATABASE_URL=${DATABASE_URL}" >> "${ENV_FILE_PATH}"
 
           # Clerk Runtime Variables
