--- a/azure-pipelines-deploy-vm.yml
+++ b/azure-pipelines-deploy-vm.yml
@@ -74,15 +74,37 @@ stages:
         Contents: |
           .next/**
           public/**
-          node_modules/**
+          #node_modules/**
           package.json
           pnpm-lock.yaml
           next.config.ts
           .env
-          prisma/schema.prisma
+          prisma/**
         TargetFolder: '$(VM_PROJECT_PATH)'
         CleanTargetFolder: true
         OverWrite: true
+
+    - task: Bash@3
+      displayName: 'Install Production Dependencies on VM'
+      inputs:
+        targetType: 'inline'
+        script: |
+          echo "Installing production dependencies in $(VM_PROJECT_PATH)..."
+          pnpm install --prod --frozen-lockfile # Use --prod to skip devDependencies
+          echo "Production dependencies installed."
+        failOnStderr: true
+        workingDirectory: '$(VM_PROJECT_PATH)'
+    - task: Bash@3
+      displayName: 'Prisma Generate Client on VM (Post-Install)'
+      inputs:
+        targetType: 'inline'
+        script: |
+          echo "Running Prisma Generate in deployment directory after fresh install..."
+          pnpm exec prisma generate
+          echo "Prisma Client generated for deployment environment."
+        failOnStderr: true
+        workingDirectory: '$(VM_PROJECT_PATH)'
+         
     - task: Bash@3
       displayName: 'Run Prisma Database Migrations on VM'
       inputs:
