--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.507.0",
     "next": "15.3.1",
     "react": "^19.1.0",
+    "react-cookie-consent": "^9.0.0",
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.1.0",
     "svix": "^1.64.1",
