Update azure-pipelines-deploy-vm.yml for Azure Pipelines

--- a/azure-pipelines-deploy-vm.yml
+++ b/azure-pipelines-deploy-vm.yml
@@ -44,6 +44,8 @@ stages:
           # Other Runtime Variables
           echo "NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in" >> "${ENV_FILE_PATH}"
           echo "NEXT_PUBLIC_CLERK_SIGN_UP_URL==/sign-up" >> "${ENV_FILE_PATH}"
+          echo "NEXT_PUBLIC_GA_MEASUREMENT_ID="$(NEXT_PUBLIC_GA_MEASUREMENT_ID) >> "${ENV_FILE_PATH}"
+
           echo "GOOGLE_API_KEY="$(GOOGLE_API_KEY) >> "${ENV_FILE_PATH}"
 
           echo ".env file created successfully."
