feat: Implement vendor association for services and appointments
- Added vendorId field to Service and Appointment models in the database.
- Updated service and appointment routes to enforce vendor ownership checks.
- Created a script to populate existing services and appointments with a default vendor.
- Enhanced GET, POST, PUT, and DELETE endpoints for services to ensure proper vendor validation.
- Adjusted appointment availability checks to consider vendor-specific services.
- Improved error handling and logging throughout the API for better debugging.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "compose:down": "docker compose -f docker-compose.yml -f docker-compose.dev.yml -f docker-compose.prod.yml down",
     "compose:build": "docker compose -f docker-compose.yml -f docker-compose.dev.yml build --no-cache app",
     "compose:deploy": "docker compose -f docker-compose.yml -f docker-compose.prod.yml pull && docker compose -f docker-compose.yml -f docker-compose.prod.yml down && docker compose -f docker-compose.yml -f docker-compose.prod.yml up -d",
-    "ngrok": "ngrok http --domain=valued-free-snail.ngrok-free.app 3000"
+    "ngrok": "ngrok http --domain=valued-free-snail.ngrok-free.app 3000",
+    "script:compile": "tsc --project tsconfig.scripts.json",
+    "db:populate-vendorids-phase0": "pnpm script:compile && node dist-scripts/phase0-populate-vendorids.js"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.18.1",
@@ -40,6 +42,7 @@
     "eslint-config-next": "15.3.1",
     "prisma": "^6.7.0",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
