--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.18.1",
     "@google/generative-ai": "^0.24.1",
+    "@headlessui/react": "^2.2.3",
     "@prisma/client": "6.7.0",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.507.0",
@@ -27,7 +28,9 @@
     "react-cookie-consent": "^9.0.0",
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.1.0",
+    "server-only": "^0.0.1",
     "svix": "^1.64.1",
+    "zod": "^3.24.4",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
@@ -37,9 +40,11 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "daisyui": "^5.0.35",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
+    "postcss": "^8.5.3",
     "prisma": "^6.7.0",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
