--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "compose:deploy": "docker compose -f docker-compose.yml -f docker-compose.prod.yml pull && docker compose -f docker-compose.yml -f docker-compose.prod.yml down && docker compose -f docker-compose.yml -f docker-compose.prod.yml up -d",
     "ngrok": "ngrok http --domain=valued-free-snail.ngrok-free.app 3000",
     "script:compile": "tsc --project tsconfig.scripts.json",
-    "db:populate-vendorids-phase0": "pnpm script:compile && node dist-scripts/phase0-populate-vendorids.js"
+    "db:scripts:run-test-script": "pnpm script:compile && node dist-scripts/test.js"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.18.1",
