--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
     "daisyui": "^5.0.35",
+    "dotenv": "^16.5.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "postcss": "^8.5.3",
