--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-cookie-consent": "^9.0.0",
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.1.0",
+    "resend": "^4.5.1",
     "server-only": "^0.0.1",
     "svix": "^1.64.1",
     "zod": "^3.24.4",
@@ -48,6 +49,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
     "prisma": "^6.7.0",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
