--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -16,4 +16,7 @@ services:
       NEXT_PUBLIC_CLERK_DOMAIN: ${NEXT_PUBLIC_CLERK_DOMAIN}
       NEXT_PUBLIC_SITE_URL: ${NEXT_PUBLIC_SITE_URL} 
       GOOGLE_API_KEY: ${GOOGLE_API_KEY} 
+      SYNC_USERS_API_KEY: ${SYNC_USERS_API_KEY}
+      RESEND_API_KEY: ${RESEND_API_KEY}
+      RESEND_FROM_EMAIL: ${RESEND_FROM_EMAIL}
       NODE_ENV: production 
