--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "compose:dev": "docker compose -f docker-compose.yml -f docker-compose.dev.yml up --build -d",
-    "compose:prod": "docker compose -f docker-compose.yml -f docker-compose.prod.yml up -d",
+    "compose:dev": "docker compose -f docker-compose.yml -f docker-compose.dev.yml up --build",
+    "compose:prod": "docker compose -f docker-compose.yml -f docker-compose.prod.yml up --build -d",
     "compose:down": "docker compose -f docker-compose.yml -f docker-compose.dev.yml -f docker-compose.prod.yml down",
     "compose:build": "docker compose -f docker-compose.yml -f docker-compose.dev.yml build --no-cache app",
     "compose:deploy": "docker compose -f docker-compose.yml -f docker-compose.prod.yml pull && docker compose -f docker-compose.yml -f docker-compose.prod.yml down && docker compose -f docker-compose.yml -f docker-compose.prod.yml up -d",
@@ -54,5 +54,16 @@
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
     "typescript": "^5"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@prisma/client",
+      "@prisma/engines",
+      "prisma",
+      "sharp",
+      "@tailwindcss/oxide",
+      "@clerk/shared", 
+      "unrs-resolver"  
+    ]
   }
 }
