- Refactored weekend calendar behavior

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -26,6 +26,7 @@ services:
       RESEND_API_KEY: ${RESEND_API_KEY}
       RESEND_FROM_EMAIL: ${RESEND_FROM_EMAIL}
       NODE_ENV: development
+      TZ: "Europe/Belgrade"
     volumes:
       [] 
 
