--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -20,3 +20,4 @@ services:
       RESEND_API_KEY: ${RESEND_API_KEY}
       RESEND_FROM_EMAIL: ${RESEND_FROM_EMAIL}
       NODE_ENV: production 
+      TZ: "Europe/Belgrade"
