--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
     volumes:
-      - postgres_data:/var/lib/postgresql/data # Persist database data
+      - postgres_data:/var/lib/postgresql/data 
     ports:
       - "${POSTGRES_PORT:-5432}:5432" 
     healthcheck: 
@@ -16,5 +16,23 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+  pgadmin: 
+    image: dpage/pgadmin4:latest
+    container_name: friznaklik_pgadmin
+    restart: always
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-admin@example.com} 
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}     
+      PGADMIN_LISTEN_PORT: 80 
+    ports:
+      - "${PGADMIN_HOST_PORT:-5050}:80" 
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin 
+    depends_on:
+      db:
+        condition: service_healthy 
+    networks: 
+      - default 
 volumes:
   postgres_data:
+  pgadmin_data:
