--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,11 +21,11 @@ services:
     container_name: friznaklik_pgadmin
     restart: always
     environment:
-      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-admin@example.com} 
-      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}     
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL} 
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}     
       PGADMIN_LISTEN_PORT: 80 
     ports:
-      - "${PGADMIN_HOST_PORT:-5050}:80" 
+      - "${PGADMIN_HOST_PORT}:80" 
     volumes:
       - pgadmin_data:/var/lib/pgadmin 
     depends_on:
